changed .getfirst to .get(0) to avoid errors. fixed mistake in win logic